# xiaozhi-mcp-test

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  DOCKER.md  Dockerfile  README.md  TODO_SECURITY.md  agent_tools.py  docker-compose.yml  link_reference.md  mcp_config.example.json  mcp_config.json  mcp_pipe.py  pyproject.toml  requirements.txt  tools_config.example.json
.github/workflows/: deploy-ghcr.yml
mcp_server/: calculator_server.py  fortune_server.py  news_server.py  numerology_server.py  search_server.py
src/mcp_xiaozhi/: __init__.py  ably_listener.py  config.py  connection.py  database.py  main.py  pipe.py  server_builder.py  tools_filter.py  utils.py
test/: help.md
tools/: __init__.py  fortune_tools.py  gold_tools.py  math_tools.py  new_tools.py  news_tools.py  numerology_tools.py  search_tools.py  utils.py
web/: WEB_ARCHITECTURE.md  app.js  auth.py  common.css  edge_tts_api.py  http_handler.py  index.html  server.py  style.css  websocket_hub.py
web-cms/: ARCHITECTURE.md  index.html  server.py  style.css
web-cms/backend/: __init__.py  config.py  dependencies.py  main.py
web-cms/backend/routes/: auth.py  endpoints.py  mcp_servers.py  mcp_tools.py
web-cms/backend/schemas/: auth.py  endpoints.py  mcp_servers.py  mcp_tools.py
web-cms/js/: api.js  backup-restore.js  endpoints.js  main.js  mcp-servers.js  mcp-tools.js  utils.js
web/js/: chat-api.js  chat.js  mcp-protocol.js  settings.js  state.js  tabs.js  tools.js  tts.js  ttsapi-tts.js  ui-utils.js  websocket.js
web/libs/: edge-tts.js
(+4 files in other folders)
